# owned-ttf-parser

./: CHANGELOG.md  Cargo.toml  README.md  test
.github/workflows/: ci.yml
src/: convert.rs  lib.rs  owned.rs  preparse.rs
tests/: face_mut.rs  owned_ttf.rs  preparse.rs
