[package]
name = "owned_ttf_parser"
# Version should be inline with ttf-parser
version = "0.12.0"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"
description = "ttf-parser plus support for owned data"
repository = "https://github.com/alexheretic/owned-ttf-parser"
keywords = ["ttf", "truetype", "otf", "opentype"]
license = "Apache-2.0"
readme="README.md"

[dependencies]
ttf-parser = { version = "0.12", default-features = false }

[features] 
default = ["std", "variable-fonts"]
# Activates usage of std.
std = ["ttf-parser/std"]
# Enables variable fonts support.
variable-fonts = ["ttf-parser/variable-fonts"]