[package]
name = "owned_ttf_parser"
# Version should be inline with ttf-parser
version = "0.13.1"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"
description = "ttf-parser plus support for owned data"
repository = "https://github.com/alexheretic/owned-ttf-parser"
keywords = ["ttf", "truetype", "otf", "opentype"]
license = "Apache-2.0"
readme="README.md"

[dependencies]
ttf-parser = { version = "0.13.1", default-features = false }

[features] 
default = ["std", "opentype-layout", "variable-fonts", "glyph-names"]
# Activates usage of std.
std = ["ttf-parser/std"]
# Enables variable fonts support. Increases binary size almost twice.
# Includes avar, CFF2, fvar, gvar, HVAR, MVAR and VVAR tables.
variable-fonts = ["ttf-parser/variable-fonts"]
# Enables GDEF, GPOS and GSUB tables.
opentype-layout = ["ttf-parser/opentype-layout"]
# Enables glyph name query via `Face::glyph_name`.
# TrueType fonts do not store default glyph names, to reduce file size,
# which means we have to store them in ttf-parser. And there are almost 500 of them.
# By disabling this feature a user can reduce binary size a bit.
glyph-names = ["ttf-parser/glyph-names"]
